--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 }
 
 body {
+  position: relative;
   min-height: 100vh;
   margin: 0 auto;
   font-family: Commissioner, sans-serif;
@@ -24,8 +25,15 @@ button {
     cursor: pointer;
   }
 
+p {
+  color: var(--dark-gray);
+  font-weight: 500;
+  line-height: 2rem;
+}
+
 header {
-  width: 100vw;
+  position: absolute;
+  width: 100%;
   height: 40vh;
   background-image: url(./assets/images/image-hero-desktop.jpg);
   background-size: cover;
@@ -33,13 +41,13 @@ header {
 }
 
 main {
-  transform: translate(0, -10vh);
-  width: 90%;
-  max-width: 1024px;
+  width: 100%;
+  display: grid;
+  place-items: center;
 }
 
 @media screen and (max-aspect-ratio: 1) {
   header {
     background-image: url(./assets/images/image-hero-mobile.jpg);
-  } 
+  }
 }
