--- a/src/components/Main/Modal/BackThisProject/RewardSelect/CustomCheckbox/CustomCheckbox.css
+++ b/src/components/Main/Modal/BackThisProject/RewardSelect/CustomCheckbox/CustomCheckbox.css
@@ -1,6 +1,6 @@
 .checkbox {
     position: absolute;
-    width: 1.5rem;
+    height: 1.17em;
     aspect-ratio: 1;
     border: solid 0.1rem #e0e0e0;
     border-radius: 50%;
@@ -8,18 +8,26 @@
     left: 2rem;
 }
 
-    .checkbox:hover {
-        cursor: pointer;
-    }
-
     .checked {
         display: none;
         position: absolute;
         left: 50%;
         top: 50%;
-        width: 1rem;
+        width: 60%;
         aspect-ratio: 1;
         background-color: var(--moderate-cyan);
         transform: translate(-50%, -50%);
         border-radius: 50%;
     }
+
+@media screen and (max-aspect-ratio: 1) {
+    .checkbox {
+        transform: translate(0, 50%);
+        top: 1.5rem;
+        left: 1.5rem;
+    }
+
+    .checkbox:first {
+        transform: none;
+    }
+}
