--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,6 +32,7 @@
   #heading {
     position: relative;
     padding: 2rem 1rem;
+    z-index: 1;
   }
     #heading img:nth-child(2) {
       display: block;
