--- a/src/components/Main/MainContent.css
+++ b/src/components/Main/MainContent.css
@@ -13,8 +13,16 @@
     }
 
     #intro {
+        position: relative;
         text-align: center;
     }
+
+        #mastercraft {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
         #buttons {
             margin-block-start: 2rem;
             display: flex;
